--- a/src/components/header/Header.css
+++ b/src/components/header/Header.css
@@ -2,7 +2,7 @@
 .header
 {
   min-height: 100vh;
-  background: linear-gradient(rgba(0, 0, 0 ,.9), rgba(0, 0, 0 ,.9)), url('../../assets/images/header_main_img.jpg') center/cover no-repeat;
+  background: url('../../assets/images/img_1.jpg') center/cover no-repeat;
   padding: 8rem 0;
 }
 
